cluster/services/photoprism.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
spec:
  selector:
    matchLabels:
      run: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        run: photoprism
    spec:
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-claim
      containers:
      - name: photoprism
        image: thielepaul/photoprism:db-api
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "1800Mi"
            cpu: "2000m"
        ports:
        - containerPort: 2342
          name: http
          protocol: TCP
        volumeMounts:
        - name: nfs
          mountPath: "/originals/archive"
          subPath: "nextcloud/ohthehugemantee/files/archive/Photos"
        - name: nfs
          mountPath: "/originals/camera-roll"
          subPath: "nextcloud/ohthehugemantee/files/Camera Uploads"
        - name: nfs
          mountPath: "/assets"
          subPath: ".docker/config/photoprism"
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http

---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    run: photoprism
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: photoprism
  annotations:
    traefik.frontend.priority: "2"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/hsts-max-age: "15552000"
    ingress.kubernetes.io/hsts-include-subdomains: "true"
    ingress.kubernetes.io/hsts-preload: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: photos.germany.vertesi.com
    http:
      paths:
      - backend:
          serviceName: photoprism
          servicePort: http
        path: /
  tls:
  - hosts:
    - photos.germany.vertesi.com
    secretName: photos-germany-vertesi-com-tls
